
- 1.38 released -

Deal with the sysinst message changes of 2015-04-30.

When halting the VM, don't quit as soon as the text "halted" is seen,
because it may be part the message "halted by root", which is printed
before disks have been synced.  Instead look for "The operating system
has halted", EOF, or a timeout.

- 1.37 released -

The global test() function is no longer supported, use the run_tests()
method of the Anita object instead.

When halting the VM, do not attempt to log in if already logged in.

Make the distinctive shell prompts different from one invocation of
anita to another, so that anita can run itself recursively on the VM
without the outer instance mistaking a shell prompt from an inner
instance for one of its own.

- 1.36 released -

When running a shell command, wrap the exit status in distictive text
so that it can be reliably matched in the presence of buffered output
containing other numeric strings.

Halt the VM when done.

Print the qemu command.

- 1.35 released -

Support Linux host systems that have genisoimage but not mkisofs, such
as Debian 7.

New command line option --run-timeout.

- 1.34 released -

Do not require releases to contain install floppies, since amd64 no
longer has them.

The default value of the --boot-from option is now "cdrom" if the
install floppies are missing.

When reporting a failed download of optional files, be clearer that
this is not an error.  Also, don't treat arbitrary exceptions during
downloads as indicating a missing file, only the expected IOError.

Increase the default disk size from 768M to 1G, as 768M is no
longer sufficient for amd64.

New command line option --structured-log-file.  This is like
--structured-log but takes the name of a log file as an
argument, and the structured logging is in addition to, not
instead of, the traditional logging to stdout.

Increase installation timeout from 1 hour to 3 hours so that
a system built with DEBUG and LOCKDEBUG can be installed under